test/unreachableConsume.slq

def main(){
	x:=H(0:ğ”¹);
	y:=H(1:ğ”¹); // error
	return x;
	measure(y);
}
